--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,12 +30,13 @@ skip_commits:
   message: /updated readme.*/
 
 os:
+- Windows Server 2012 R2
 - WMF 5
 
 install:
   - cinst pester
   - ps: (New-Object System.Net.WebClient).DownloadFile('https://codeload.github.com/alx9r/ToolFoundations/zip/master',"$HOME\master.zip")
-  - ps: Expand-Archive "$HOME\master.zip" $env:PSModulePath.Split(';')[0]
+  - ps: [System.Reflection.Assembly]::LoadWithPartialName("System.IO.Compression.FileSystem") | Out-Null; [System.IO.Compression.ZipFile]::ExtractToDirectory("$HOME\master.zip",$env:PSModulePath.Split(';')[0])
   - ps: Rename-Item "$($env:PSModulePath.Split(';')[0])\ToolFoundations-master" 'ToolFoundations'
   - ps: Import-Module ToolFoundations
 
